更新了删除问题接口
